[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/tabs/fleet_tab.gd" id="1"]

[node name="FleetTab" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "FLEET"
theme_override_font_sizes/font_size = 20

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ShipsList" type="VBoxContainer" parent="VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="DispatchPopup" type="PanelContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="DispatchContent" type="VBoxContainer" parent="VBox/DispatchPopup"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
